Added get-all-category and swagger ui basic setup completed